Logo yolu düzeltildi

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
 <!-- Üst kısımda yer alan logo -->
 <div class="container text-center mt-4">
-    <img width="230" src="media/img/logo.png" alt="Logo" class="img-fluid">
+    <img width="230" src="/media/img/logo.png" alt="Logo" class="img-fluid">
     <p class="text-light">Your Demo Logo</p>
 </div>
 
