Dil dosyaları güncellendi ve bazı pycache dosyaları değiştirildi.

--- a/tcore/templates/abouts.html
+++ b/tcore/templates/abouts.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{%load i18n%}
 
 {% block title %}Hakkımızda{% endblock %}
 {% block page_description %} Hakkımızda sayfa içeriği {% endblock %}
