--- a/tcore/templates/index.html
+++ b/tcore/templates/index.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 {%load static%}
 
-{% block title %} Home {% endblock %}
+
+{%load i18n%}
+
+
+{% block title %} {% translate "Kurumsal Web Sitesi V1" %} {% endblock %}
 
 {% block page_description %} Home {% endblock %}
 
@@ -38,7 +42,7 @@
 <!--Hakkımızda-->
 <div class="row mt-4 mb-4">
     <div class="col-md-8">
-        <h2 class="mb-4">Hakkımızda</h2>
+        <h2 class="mb-4">{% translate "Hakkımızda"%}</h2>
         <p>Biz, Your Company adıyla 20 yılı aşkın bir süredir faaliyet gösteren bir şirketiz.
             Müşterilerimize kaliteli ürün ve hizmetler sunmak için buradayız. Yenilikçi çözümlerimiz ve uzman ekibimizle
             her zaman yanınızdayız. Biz, Your Company adıyla 20 yılı aşkın bir süredir faaliyet gösteren bir şirketiz.
@@ -51,7 +55,7 @@
             Müşterilerimize kaliteli ürün ve hizmetler sunmak için buradayız. Yenilikçi çözümlerimiz ve uzman ekibimizle
             her zaman yanınızdayız.
         </p>
-        <a href="#" class="btn btn-primary">Daha Fazla</a>
+        <a href="#" class="btn btn-primary">{% translate "Daha Fazla"%}</a>
     </div>
 
     <div class="col-md-4">
@@ -62,7 +66,7 @@
 
 <!--Services-->
 <div class="row mt-4 mb-4">
-    <h2 class="mb-4">Services</h2>
+    <h2 class="mb-4">{% translate "Servis"%}</h2>
 
     <!-- Card 1 -->
     <div class="col-md-3 mt-3">
@@ -148,7 +152,7 @@
 
 <!--Blogs-->
 <div class="row mt-4 mb-4">
-    <h2 class="mb-4">Blogs</h2>
+    <h2 class="mb-4">Blog</h2>
     <!-- Card 1 -->
     <div class="col-md-3">
         <div class="card">
@@ -156,7 +160,7 @@
             <div class="card-body">
                 <h5 class="card-title">Başlık 1</h5>
                 <p class="card-text">Açıklama metni buraya yazılır. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <a href="#" class="btn btn-primary">Detaylar</a>
+                <a href="#" class="btn btn-primary">{% translate "Detaylar"%}</a>
             </div>
         </div>
     </div>
@@ -168,7 +172,7 @@
             <div class="card-body">
                 <h5 class="card-title">Başlık 2</h5>
                 <p class="card-text">Açıklama metni buraya yazılır. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <a href="#" class="btn btn-primary">Detaylar</a>
+                <a href="#" class="btn btn-primary">{% translate "Detaylar"%}</a>
             </div>
         </div>
     </div>
@@ -180,7 +184,7 @@
             <div class="card-body">
                 <h5 class="card-title">Başlık 3</h5>
                 <p class="card-text">Açıklama metni buraya yazılır. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <a href="#" class="btn btn-primary">Detaylar</a>
+                <a href="#" class="btn btn-primary">{% translate "Detaylar"%}</a>
             </div>
         </div>
     </div>
@@ -191,7 +195,7 @@
             <div class="card-body">
                 <h5 class="card-title">Başlık 4</h5>
                 <p class="card-text">Açıklama metni buraya yazılır. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <a href="#" class="btn btn-primary">Detaylar</a>
+                <a href="#" class="btn btn-primary">{% translate "Detaylar"%}</a>
             </div>
         </div>
     </div>
