--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,10 @@
 {% load static %}
+{%load i18n%}
+
+{% get_current_language as CURRENT_LANGUAGE %}
+{% get_available_languages as AVAIABLE_LANGUAGES %}
+{% get_language_info_list for AVAIABLE_LANGUAGES as languages %}
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -30,37 +36,40 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'index' %}">Homepage</a>
+                    <a class="nav-link" href="{% url 'index' %}">{% translate "Anasayfa" %}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'abouts'%}">About</a>
+                    <a class="nav-link" href="{% url 'abouts'%}">{% translate "Hakkımda"%}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'service' %}">Services</a>
+                    <a class="nav-link" href="{% url 'service' %}">{% translate "Hizmetler"%}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'blog' %}">Blogs</a>
+                    <a class="nav-link" href="{% url 'blog' %}">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+                    <a class="nav-link" href="{% url 'contact' %}">{% translate "İletişim"%}</a>
                 </li>
             </ul>
             <div class="d-flex">
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="languageDropdown"
                         data-bs-toggle="dropdown" aria-expanded="false">
-                        Language
+                        {% translate "Seçili Dİl"%} : {{CURRENT_LANGUAGE}}
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="languageDropdown">
-                        <li><a class="dropdown-item" href="#">Türkçe</a></li>
-                        <li><a class="dropdown-item" href="#">İngilizce</a></li>
-                        <!-- Add more language options as needed -->
+                        {% for language in languages %}
+                        <li><a 
+                            {% if language.code == CURRENT_LANGUAGE %}
+                                class="dropdown-item active"
+                            {% else %}
+                                class="dropdown-item"
+                            {% endif %}
+                            href="{% url 'set_language' language.code %}">{{language.name}}</a>
+                        {% endfor %}
                     </ul>
                 </div>
-                <form class="d-flex ms-3">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-light" type="submit">Search</button>
-                </form>
+
             </div>
         </div>
     </div>
